2007-06-27 Applied Micheal's tk savefig bugfix described at
           http://sourceforge.net/tracker/index.php?func=detail&aid=1716732&group_id=80706&atid=560720
           Thanks Michael!


2007-06-27 Patch for get_py2exe_datafiles() to work with new directory
           layout. (Thanks Tocer and also Werner Bruhin.) -ADS


2007-06-27 Added a scroll event to the mpl event handling system and
           implemented it for backends GTK* -- other backend
           users/developers/maintainers, please add support for your
           backend. - JDH

2007-06-25 Changed default to clip=False in colors.Normalize;
           modified ColorbarBase for easier colormap display - EF

2007-06-13 Added maskedarray option to rc, numerix - EF

2007-06-11 Python 2.5 compatibility fix for mlab.py - EF

2007-06-10 In matplotlibrc file, use 'dashed' | 'solid' instead
           of a pair of floats for contour.negative_linestyle - EF

2007-06-08 Allow plot and fill fmt string to be any mpl string
            colorspec - EF

2007-06-08 Added gnuplot file plotfile function to pylab -- see
           examples/plotfile_demo.py - JDH

2007-06-07 Disable build of numarray and Numeric extensions for
           internal MPL use and the numerix layer. - ADS

2007-06-07 Added csv2rec to matplotlib.mlab to support automatically
           converting csv files to record arrays using type
           introspection, and turned on native datetime support using
           the new units support in matplotlib.dates.  See
           examples/loadrec.py !  JDH

2007-06-07 Simplified internal code of _auto_legend_data - NN

2007-06-04 Added labeldistance arg to Axes.pie to control the raidal
           distance of the wedge labels - JDH

2007-06-03 Turned mathtext in SVG into single <text> with multiple <tspan>
           objects (easier to edit in inkscape). - NN

===============================================================
2007-06-02 Released 0.90.1 at revision 3352
